WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255485
[GStreamer][MediaStream] fast/mediastream/getDisplayMedia-size.html hits ASSERT in Debug builds
https://bugs.webkit.org/show_bug.cgi?id=255485
Summary
[GStreamer][MediaStream] fast/mediastream/getDisplayMedia-size.html hits ASSE...
Philippe Normand
Reported
2023-04-15 07:45:13 PDT
(gdb) bt #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:327 #1 0x00007f4cd514efe7 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Assertions.h:758 #2 0x00007f4cdb083c3b in WebCore::RealtimeVideoSource::setSizeFrameRateAndZoom(std::optional<int>, std::optional<int>, std::optional<double>, std::optional<double>) (this=0x7f4cb615a320, width=std::optional<int> = {...}, height=std::optional<int> = {...}, frameRate=std::optional<double> [no contained value], zoom=std::optional<double> [no contained value]) at /app/webkit/Source/WebCore/platform/mediastream/RealtimeVideoSo urce.cpp:105 #3 0x00007f4cdb056c8f in WebCore::RealtimeMediaSource::applyConstraints(WebCore::FlattenedConstraint const&) (this=0x7f4cb615a320, constraints=...) at /app/webkit/Source/WebCore/platform/mediastream/RealtimeMedia Source.cpp:1021 #4 0x00007f4cdb056f95 in WebCore::RealtimeMediaSource::applyConstraints(WebCore::MediaConstraints const&) (this=0x7f4cb615a320, constraints=...) at /app/webkit/Source/WebCore/platform/mediastream/RealtimeMediaSou rce.cpp:1044 #5 0x00007f4cdb057014 in WebCore::RealtimeMediaSource::applyConstraints(WebCore::MediaConstraints const&, WTF::CompletionHandler<void (std::optional<WebCore::RealtimeMediaSource::ApplyConstraintsError>&&)>&&) (th is=0x7f4cb615a320, constraints=..., completionHandler=...) at /app/webkit/Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp:1050 #6 0x00007f4cdb038a74 in WebCore::MediaStreamTrackPrivate::applyConstraints(WebCore::MediaConstraints const&, WTF::CompletionHandler<void (std::optional<WebCore::RealtimeMediaSource::ApplyConstraintsError>&&)>&&) (this=0x7f4cb6327080, constraints=..., completionHandler=...) at /app/webkit/Source/WebCore/platform/mediastream/MediaStreamTrackPrivate.cpp:188 #7 0x00007f4cd8cce0fe in WebCore::MediaStreamTrack::applyConstraints(std::optional<WebCore::MediaTrackConstraints> const&, WebCore::DOMPromiseDeferred<void>&&) (this=0x7f4c6e122400, constraints=std::optional<WebC ore::MediaTrackConstraints> = {...}, promise=...) at /app/webkit/Source/WebCore/Modules/mediastream/MediaStreamTrack.cpp:320 #8 0x00007f4cd7da22b7 in operator()() const (__closure=0x7ffc070d1750) at /app/webkit/WebKitBuild/Debug/WebCore/DerivedSources/JSMediaStreamTrack.cpp:816 #9 0x00007f4cd7db05d8 in WebCore::toJS<WebCore::IDLPromise<WebCore::IDLUndefined>, WebCore::jsMediaStreamTrackPrototypeFunction_applyConstraintsBody(JSC::JSGlobalObject*, JSC::CallFrame*, IDLOperationReturningPro mise<JSMediaStreamTrack>::ClassParameter, WTF::Ref<DeferredPromise>&&)::<lambda()> >(JSC::JSGlobalObject &, WebCore::JSDOMGlobalObject &, JSC::ThrowScope &, struct {...} &&) (lexicalGlobalObject=..., globalObject= ..., throwScope=..., valueOrFunctor=...) at /app/webkit/Source/WebCore/bindings/js/JSDOMConvertBase.h:195 #10 0x00007f4cd7da256f in WebCore::jsMediaStreamTrackPrototypeFunction_applyConstraintsBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::IDLOperationReturningPromise<WebCore::JSMediaStreamTrack>::ClassParameter , WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&) (lexicalGlobalObject=0x7f4c6e01c068, callFrame=0x7ffc070d1c80, castedThis=0x7f4cb630dcc8, promise=...) at /app/webkit/WebKitBui ld/Debug/WebCore/DerivedSources/JSMediaStreamTrack.cpp:816 #11 0x00007f4cd7db07dc in operator()(JSC::JSGlobalObject&, JSC::CallFrame&, WTF::Ref<WebCore::DeferredPromise, WTF::RawPtrTraits<WebCore::DeferredPromise> >&&) const (__closure=0x7ffc070d1b78, lexicalGlobalObject= ..., callFrame=..., promise=...) at /app/webkit/Source/WebCore/bindings/js/JSDOMOperationReturningPromise.h:54 #12 0x00007f4cd7db1d37 in WebCore::callPromiseFunction<WebCore::IDLOperationReturningPromise<WebCore::JSMediaStreamTrack>::call<WebCore::jsMediaStreamTrackPrototypeFunction_applyConstraintsBody>(JSC::JSGlobalObjec t&, JSC::CallFrame&, char const*)::<lambda(JSC::JSGlobalObject&, JSC::CallFrame&, WTF::Ref<WebCore::DeferredPromise>&&)> >(JSC::JSGlobalObject &, JSC::CallFrame &, struct {...}) (lexicalGlobalObject=..., callFrame =..., functor=...) at /app/webkit/Source/WebCore/bindings/js/JSDOMPromiseDeferred.h:349 #13 0x00007f4cd7db0814 in WebCore::IDLOperationReturningPromise<WebCore::JSMediaStreamTrack>::call<WebCore::jsMediaStreamTrackPrototypeFunction_applyConstraintsBody>(JSC::JSGlobalObject&, JSC::CallFrame&, char con st*) (lexicalGlobalObject=..., callFrame=..., operationName=0x7f4cceebed1b "applyConstraints") at /app/webkit/Source/WebCore/bindings/js/JSDOMOperationReturningPromise.h:41 #14 0x00007f4cd7da25ef in WebCore::jsMediaStreamTrackPrototypeFunction_applyConstraints(JSC::JSGlobalObject*, JSC::CallFrame*) (lexicalGlobalObject=0x7f4c6e01c068, callFrame=0x7ffc070d1c80) at /app/webkit/WebKitBu ild/Debug/WebCore/DerivedSources/JSMediaStreamTrack.cpp:821 #15 0x00007f4c756081b8 in () #16 0x00007ffc070d1d00 in () #17 0x00007f4cc8ea7e63 in op_call_slow_return_location () at /app/webkit/Source/JavaScriptCore/llint/LowLevelInterpreter.asm:1191 #18 0x0000000000000000 in ()
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-04-21 02:18:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13015
EWS
Comment 2
2023-04-21 07:12:16 PDT
Committed
263240@main
(64065c28f61d): <
https://commits.webkit.org/263240@main
> Reviewed commits have been landed. Closing PR #13015 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-21 07:13:23 PDT
<
rdar://problem/108367875
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug