[GStreamer][MediaStream] fast/mediastream/getDisplayMedia-size.html hits ASSERT in Debug builds https://bugs.webkit.org/show_bug.cgi?id=255485

Reviewed by Xabier Rodriguez-Calvar.

The crash was happening because the mock display source was reporting an empty size. Proxying the
size accessor to the underlying mock video source fixed that issue, but then the video presets
handling also needed customization, because the mock display source provides no preset, those are
specific to camera capture sources, so the mock display source can't use the mock video capture
source presets and has to report an empty presets list.

* Source/WebCore/platform/mediastream/RealtimeMediaSource.h:
* Source/WebCore/platform/mediastream/RealtimeVideoCaptureSource.h:
* Source/WebCore/platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.h:

Canonical link: https://commits.webkit.org/263240@main